Make XOW's toString consistent over all cases. bug 398109, r=jst sr=bzbarsky a=beltzner